<resources>
    <string name="app_name">SalleBooks</string>
    <string name="title_activity_login">SalleBooks</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_bad_character">Sorry you cannot use this character ~ on username or password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">No account yet?</string>
    <string name="prompt_username">Username</string>
    <string name="register_title">Register</string>
    <string name="register_button">Create account</string>
    <string name="account_ok">Account created successfully</string>
    <string name="account_fail">There was an error creating the account</string>
    <string name="see_password">See password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="detail_author">Author:</string>
    <string name="detail_release_date">Release date:</string>
    <string name="detail_description">Description:</string>
    <string name="add_readed">add to readed</string>
    <string name="add_wish">Add to wish List</string>
    <string name="title_activity_detail_book">DetailBook</string>
    <string name="delete">Delete</string>
    <string name="well_saved">Guardado Correctamente</string>
</resources>
