<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="150dp"
            android:layout_height="200dp" />
        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/detail_image"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/standard_margin"/>
        <TextView
            android:id="@+id/detail_author_spe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/detail_image"
            android:layout_below="@id/detail_title"
            android:textSize="15sp"
            android:text="@string/detail_author"
            android:layout_marginTop="@dimen/standard_margin_long"
            android:layout_marginStart="@dimen/standard_margin"/>
        <TextView
            android:id="@+id/detail_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/detail_image"
            android:layout_below="@id/detail_author_spe"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin" />

        <TextView
            android:id="@+id/detail_release_date_spe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/detail_image"
            android:layout_below="@id/detail_author"
            android:layout_marginTop="@dimen/standard_margin_long"
            android:layout_marginStart="@dimen/standard_margin"
            android:text="@string/detail_release_date"/>

        <TextView
            android:id="@+id/detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/detail_image"
            android:layout_below="@id/detail_release_date_spe"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"/>

        <TextView
            android:id="@+id/detail_description_spe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_image"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/detail_description"/>
        <TextView
            android:id="@+id/detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_description_spe"
            android:layout_marginTop="@dimen/standard_margin" />
    </RelativeLayout>
</FrameLayout>